[gd_scene load_steps=4 format=3 uid="uid://d0xkfsnp4if7t"]

[ext_resource type="Script" uid="uid://d32mysyi1nv6a" path="res://scripts/multiplayer_spawner.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://bsw1n0fi4272a" path="res://game-objects/knight.tscn" id="2_h2yge"]
[ext_resource type="Script" uid="uid://bj7amob3xdjmf" path="res://ui.gd" id="3_h2yge"]

[node name="Main" type="Node2D"]

[node name="Players" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
unique_name_in_owner = true
_spawnable_scenes = PackedStringArray("uid://bsw1n0fi4272a")
spawn_path = NodePath("../Players")
script = ExtResource("1_ig7tw")
network_player = ExtResource("2_h2yge")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_h2yge")

[node name="HostButton" type="Button" parent="UI"]
offset_left = 116.0
offset_top = 76.0
offset_right = 190.0
offset_bottom = 107.0
text = "Host"

[node name="JoinButton" type="Button" parent="UI"]
offset_left = 117.0
offset_top = 113.0
offset_right = 191.0
offset_bottom = 144.0
text = "Join"

[node name="GameNameEdit" type="LineEdit" parent="UI"]
offset_left = 55.0
offset_top = 31.0
offset_right = 250.0
offset_bottom = 62.0
text = "knights-demo"
placeholder_text = "game name"
alignment = 1

[connection signal="pressed" from="UI/HostButton" to="UI" method="_on_host_button_pressed"]
[connection signal="pressed" from="UI/JoinButton" to="UI" method="_on_join_button_pressed"]
